[gd_scene load_steps=6 format=2]

[ext_resource path="res://tools/class_editor/components/editor/menu_button.gd" type="Script" id=1]
[ext_resource path="res://tools/class_editor/components/properties/components/class_item.gd" type="Script" id=2]
[ext_resource path="res://tools/class_editor/components/editor/class_properties.gd" type="Script" id=3]
[ext_resource path="res://tools/class_editor/components/properties/components/sprite_sheets.gd" type="Script" id=4]
[ext_resource path="res://tools/class_editor/components/properties/components/sprite.gd" type="Script" id=5]

[node name="ClassItem" type="PanelContainer"]
margin_right = 251.0
margin_bottom = 116.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 244.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="PropertyDivider" type="HBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 233.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="IconDivider" type="VBoxContainer" parent="MarginContainer/PropertyDivider"]
margin_right = 142.0
margin_bottom = 94.0
size_flags_vertical = 3
custom_constants/separation = 4

[node name="ButtonsDivider" type="HBoxContainer" parent="MarginContainer/PropertyDivider/IconDivider"]
margin_right = 142.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ResourceName" type="LineEdit" parent="MarginContainer/PropertyDivider/IconDivider/ButtonsDivider"]
margin_right = 114.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "ClassType"

[node name="MenuButton" type="MenuButton" parent="MarginContainer/PropertyDivider/IconDivider/ButtonsDivider"]
margin_left = 118.0
margin_right = 142.0
margin_bottom = 24.0
text = "..."
flat = false
align = 0
script = ExtResource( 1 )

[node name="Sprite" type="MarginContainer" parent="MarginContainer/PropertyDivider/IconDivider"]
margin_top = 28.0
margin_right = 142.0
margin_bottom = 94.0
rect_min_size = Vector2( 105, 0 )
mouse_default_cursor_shape = 2
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="ButtonDivider" type="VBoxContainer" parent="MarginContainer/PropertyDivider/IconDivider/Sprite"]
margin_right = 142.0
margin_bottom = 66.0
size_flags_vertical = 3

[node name="ChangeSheets" type="Button" parent="MarginContainer/PropertyDivider/IconDivider/Sprite/ButtonDivider"]
margin_right = 142.0
margin_bottom = 20.0
text = "Change Spritesheets"

[node name="SpriteSheets" type="TabContainer" parent="MarginContainer/PropertyDivider/IconDivider/Sprite/ButtonDivider"]
margin_top = 24.0
margin_right = 142.0
margin_bottom = 66.0
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true
script = ExtResource( 4 )

[node name="ImageDialog" type="FileDialog" parent="MarginContainer/PropertyDivider/IconDivider/Sprite"]
margin_right = 263.0
margin_bottom = 130.0
window_title = "Open File(s)"
resizable = true
dialog_text = "Select the GameObject's sprite sheets"
dialog_hide_on_ok = true
mode = 1
filters = PoolStringArray( "*.png ; PNG Images" )
current_dir = "res://assets/sprites"
current_file = "icon.png"
current_path = "res://assets/sprites/icon.png"

[node name="Properties" type="HBoxContainer" parent="MarginContainer/PropertyDivider"]
margin_left = 158.0
margin_right = 229.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
